Fix icon wrap

--- a/src/components/Track/Track.css
+++ b/src/components/Track/Track.css
@@ -31,6 +31,10 @@
   height: 4rem;
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
 /* Tooltips */
 
 .tooltip {
